# Command_Robot_to_Move

./: .gitignore  CMakeLists.txt  README.md  package.xml
comm/: README.md  voice_comm.txt  yolo_comm.txt
config/: config.py  rviz_debug_depth_cam.rviz
data/raw_rgbd_images/: README.md
doc/: ideas.md  main_commands.md  notes_RealSense.md  notes_for_real_robot.md  notes_install.md  notes_pi_raspbian.md  notes_pi_ubuntu18.md  notes_shooting_video_demo.md  notes_simulation.md  notes_topic_and_srvs.md  readme1_start_turtlebot.md  readme2_tests.md
launch/: rviz_realsense.launch  start_realsense_camera.launch  start_usb_camera.launch
src/: controllers.py  geo_trans.py  lib_for_main.py  main.py  test_detection.py  turtle_mover.py
src/3d_plane_detection/: detect_plane.py  test_pcl.py
src/detection/: detect_plane.py  test_detect_plane.ipynb  yolo_request.py  yolo_response.py
src/detection/yolo/: README.md  s1_setup.sh  s2_train.sh  s3_inference.sh
src/realsense_io/: (TODO) n0_fake_rgbd_image_publisher.py  fake_rgbd_image_publisher.py  sub_and_save_rgb_and_depth_images.py
src/speech_recognition/: README.md  voice_listener.py  voice_speaker.py
src/turtlebot_control/: lib_turtlebot.py  move_turtle_to_pose.py
src/turtlebot_controller/: lib_controllers.py  main_move_turtle.py
tests/: test_pcl.py
tests/file_communiation/: main.py  node1_master.py  node2_servant.py
utils/: detect_object_from_rgbd.py  lib_cloud.py  lib_commons.py  lib_geo_trans.py  lib_geo_trans_ros.py  lib_plane.py  lib_plot.py  lib_ransac.py  lib_ros_topic.py
(+19 files in other folders)
